--- a/www/templates/tab-add.html
+++ b/www/templates/tab-add.html
@@ -6,16 +6,16 @@
       <div class="list list-inset">
         <label class="item item-input item-floating-label">
           <span class="input-label">First Name</span>
-          <input type="text" placeholder="First Name" ng-model="person.first">
+          <input type="text" placeholder="First Name" ng-model="person.firstName">
         </label>
         <label class="item item-input item-floating-label">
           <span class="input-label">Last Name</span>
-          <input type="text" placeholder="Last Name" ng-model="person.last">
+          <input type="text" placeholder="Last Name" ng-model="person.lastName">
         </label>
         <label class="item item-input item-floating-label">
-          <ion-radio ng-model="person.choice" ng-value="'Male'">Male</ion-radio>
-          <ion-radio ng-model="person.choice" ng-value="'Female'">Female</ion-radio>
-          <ion-radio ng-model="person.choice" ng-value="'Other'">Other</ion-radio>
+          <ion-radio ng-model="person.sex" ng-value="'Male'">Male</ion-radio>
+          <ion-radio ng-model="person.sex" ng-value="'Female'">Female</ion-radio>
+          <ion-radio ng-model="person.sex" ng-value="'Other'">Other</ion-radio>
         </label>
         <label class="item item-input item-floating-label">
           <span class="input-label">Birthdate</span>
