--- a/www/templates/tab-user.html
+++ b/www/templates/tab-user.html
@@ -8,7 +8,7 @@
         <a class="button" ng-click="resetSexFilter()"> <i class="icon ion-close-circled"></i></a>
       </div>
 
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="user in filteredUsers" type="item-text-wrap" href="#/tab/contacts/{{contact.id}}">
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="user in filteredUsers" ng-click="edit(user)" type="item-text-wrap" href="#/tab/contacts/{{contact.id}}">
         <h2>{{user.firstName}} {{user.lastName}}</h2>
         <p>{{user.sex}} || {{user.birthdate | dateConvert}}</span></p>
         <i class="icon ion-chevron-right icon-accessory"></i>
