--- a/www/templates/tab-extra.html
+++ b/www/templates/tab-extra.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Extra">
- Ryan Corbin
- (920) 216-11164
+<ion-view>
+ Ryan Corbin <br/>
+ (920) 216-11164 <br/>
  Ryanjcorbin@gmail.com
 </ion-view>
