--- a/www/templates/user-edit.html
+++ b/www/templates/user-edit.html
@@ -19,11 +19,11 @@
     <div class='row'>
         <div class='col'>
             <span class='editor-label'>Title</span>
-            <label class="item item-input">
+            <ion-radio-group>
               <ion-radio ng-model="editUser.sex" ng-value="'Male'">Male</ion-radio>
               <ion-radio ng-model="editUser.sex" ng-value="'Female'">Female</ion-radio>
               <ion-radio ng-model="editUser.sex" ng-value="'Other'">Other</ion-radio>
-            </label>
+            </ion-radio-group>
         </div>
     </div>
     <div class='row'>
