Attempts to fix angular JS issue

--- a/www/templates/tab-user.html
+++ b/www/templates/tab-user.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Users">
+<ion-view view-title="Users" ng-controller="UserCtrl as ctrl">
   <ion-content>
     <ion-list>
       <div class="button-bar" >
